@@ -1,3 +1,8 @@
+2010-03-25  Ozkan Sezer <sezeroz@gmail.com>
+
+	* Sync'ed with wine-1.1.41 release version.
+	* d3dx9effect.h: added from the wine sources.
+
 2010-03-15  Ozkan Sezer <sezeroz@gmail.com>
 
 	* d3dx9shader.h (ID3DXConstantTable_SetMatrixTranspose): Fix typo.
